--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-swipeable": "^7.0.2",
     "sass": "^1.84.0",
     "scss": "^0.2.4"
   },
